--- a/styles/gen_styles.css
+++ b/styles/gen_styles.css
@@ -1,4 +1,38 @@
-.main-body{
-    background-color: rgb(35, 38, 35);
-    color: rgb(255, 255, 255);
+.main-body {
+  background-image: url("/images/pexels-eberhard-grossgasteiger-2098427.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: whitesmoke;
+  font-family: "Asap", sans-serif;
+  text-align: center;
+  margin: 0px;
+  padding: 4;
+  display: flex;
+  justify-content: center;
+}
+
+.out-width {
+  max-width: 1200px;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+.intro-name {
+  font-size: 50px;
+  padding-left: 8%;
+  padding-right: 8%;
+  margin: 0;
+  margin-top: 20px;
+  
+}
+
+.intro-discription {
+  padding-left: 8%;
+  padding-right: 8%;
+  margin: 5px;
 }
