--- a/styles/content.css
+++ b/styles/content.css
@@ -1,40 +1,70 @@
 .content{
-    display: grid;
-    margin: 0;
+  max-width: 1200px;
+  margin: 0;
 }
 
 .about-me {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-flow: row;
-    padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-flow: row;
+  padding: 15px;
+}
+
+.image-container{
+  display: flex;
+  align-items: top;
+  justify-content: center;
 }
 
 .hero-img {
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
-    border-radius: 50%;
-
+  width: 250px;
+  height: 250px;
+  overflow: hidden;
+  border-radius: 50%;
 }
 
 .hero-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: -24px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: -24px;
 }
 
+.container {
+  background-color :rgba(24, 27, 34, 0.60);
+  border-radius: 50px;
+  margin: 15px;
+  padding: 15px; 
+}
 
-.skills h2{
-    margin: 8px;
-    font-weight: 600;
+.container li{
+  white-space: nowrap;
+  font-size: 16px;
+}
+.container div{
+  display: inline-block;
+  text-align: left;
+  margin: auto;
+  padding: 5px;
+}
+
+.container h2{
+  margin-top: 0px;
+  font-weight: 600;
+  margin-bottom: 0px;
+  font-size: 28px;
 }
 
 .skills {
-    text-align: left;
-    padding-left: 50px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  margin: 0px;
+  padding: 20px;
 }
+
 
 
 #Projects {
@@ -45,7 +75,6 @@
     display: flex;
     flex: 10;
     flex-direction: column;
-    /*border: 1px solid orange;*/
     padding: 10px;
 }
 
@@ -53,9 +82,9 @@
     display: flex;
     align-items: flex-start;
     vertical-align: middle;
-    margin: 6px;
+    margin: 10px;
     padding: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(24,27,34,0.60);
     border-radius: 10px;
 }
 
@@ -66,9 +95,9 @@
 }
 
 .project-text {
-   flex: 5;
+   flex: 1;
    margin: 5px;
-   color: rgb(0, 0, 0);
+   color: rgb(255, 255, 255);
 }
 
 .project-text h1,p{
